<resources>
    <string name="app_name">Tripndrive Cars</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="location_hint">Site</string>
    <string name="start_date_hint">Date de début</string>
    <string name="search_button_text">Rechercher</string>

    <string name="end_date_hint">Date de fin</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_list_cars">ListCarsActivity</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="no_car_place_holder">Pas de voiture trouvée.</string>
    <string name="form_activity_title">Réserver une voiture</string>
    <string name="list_cars_activity_title">Choisir sa voiture</string>
    <string name="car_activity_title">Votre voiture</string>
    <string name="error_site">Site introuvable !</string>
    <string name="error_start_date">Date de début vide !</string>
    <string name="error_end_date">Date de fin vide !</string>
    <string name="error_end_date_before">Date de fin avant la date de début !</string>
    <string name="a_day_text"> /jour</string>
    <string name="km_inclued"> km inclus</string>
    <string name="additionnal_price"> /km</string>
    <string name="rent_for">Réserver pour </string>

</resources>
