<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FormActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/form_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="#3F51B5"
        android:minHeight="?android:attr/actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mdtp_white"
            android:text="@string/form_activity_title"
            android:textSize="24sp"/>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@+id/form_toolbar"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/location_button"
            android:drawable="@drawable/ic_room_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            />

        <AutoCompleteTextView
            android:id="@+id/location_text"
            android:hint="@string/location_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/location_button"
            android:layout_toStartOf="@+id/location_button"
            android:layout_alignBottom="@+id/location_button"

            />


        <ImageView
            android:id="@+id/start_date_button"
            android:drawable="@drawable/ic_date_range_black_24dp"
            android:layout_below="@+id/location_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/start_date_text"
            android:hint="@string/start_date_hint"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/start_date_button"
            android:layout_toStartOf="@+id/start_date_button"
            android:layout_alignBottom="@+id/start_date_button"
            android:layout_below="@+id/location_text"
            />


        <ImageView
            android:id="@+id/end_date_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/start_date_button"
            android:drawable="@drawable/ic_date_range_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            />
        <EditText
            android:id="@+id/end_date_text"
            android:hint="@string/end_date_hint"
            android:layout_width="wrap_content"
            android:focusableInTouchMode="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/start_date_text"
            android:layout_alignBottom="@+id/end_date_button"
            android:layout_toStartOf="@+id/end_date_button"
            android:layout_toLeftOf="@+id/end_date_button"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/search_cars_button"
            android:layout_width="match_parent"
            android:layout_below="@+id/end_date_text"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:background="#FF6D00"
            android:textColor="@color/mdtp_white"
            android:layout_marginTop="16dp"
            />

    </RelativeLayout>
</RelativeLayout>
